# nmpp

./: FFT_perfomance_and_other_funcs_for_NMC3.docx  FFT_perfomance_and_other_funcs_for_NMC4.docx  README.md  _m_t_r___addr__16s_8h_source.html  _m_t_r___addr__16u_8h_source.html  _m_t_r___addr__1_8h_source.html  _m_t_r___addr__2s_8h_source.html  _m_t_r___addr__2u_8h_source.html  _m_t_r___addr__32s_8h_source.html  _m_t_r___addr__32u_8h_source.html  _m_t_r___addr__4s_8h_source.html  _m_t_r___addr__4u_8h_source.html  _m_t_r___addr__64s_8h_source.html  _m_t_r___addr__64u_8h_source.html  _m_t_r___addr__8s_8h_source.html  _m_t_r___addr__8u_8h_source.html  _m_t_r___get_val__16s_8h_source.html  _m_t_r___get_val__16u_8h_source.html  _m_t_r___get_val__1_8h_source.html  _m_t_r___get_val__2s_8h_source.html  _m_t_r___get_val__2u_8h_source.html  _m_t_r___get_val__32s_8h_source.html  _m_t_r___get_val__32u_8h_source.html  _m_t_r___get_val__4s_8h_source.html  _m_t_r___get_val__4u_8h_source.html  _m_t_r___get_val__64s_8h_source.html  _m_t_r___get_val__64u_8h_source.html  _m_t_r___get_val__8s_8h_source.html  _m_t_r___get_val__8u_8h_source.html  _m_t_r___set_val__16s_8h_source.html  _m_t_r___set_val__16u_8h_source.html  _m_t_r___set_val__1_8h_source.html  _m_t_r___set_val__2s_8h_source.html  _m_t_r___set_val__2u_8h_source.html  _m_t_r___set_val__32s_8h_source.html  _m_t_r___set_val__32u_8h_source.html  _m_t_r___set_val__4s_8h_source.html  _m_t_r___set_val__4u_8h_source.html  _m_t_r___set_val__64s_8h_source.html  _m_t_r___set_val__64u_8h_source.html  (+1113 more)
app/: global.json  nmcmake.py
app/examples/: Makefile  local.json  local.mk
app/examples-float/: local.mk
app/examples-float/nmblas/: Makefile  local.json
app/examples/asm-inlines/: Makefile
app/examples/nmplc/: Makefile
app/examples/nmpli/: Makefile
app/examples/nmpps/: Makefile  local.json  local.mk
app/perf/: Makefile
app/perf/make_mc12101_nmpu0/: Makefile  main.cpp  mc12101brd-nmpu0.cfg
app/perf/make_mc12101_nmpu0-gcc-ld/: Makefile  main.cpp  mc12101board-nmpu0.ld
app/perf/make_mc12101_nmpu1/: Makefile  main.cpp  mc12101brd-nmpu1.cfg
app/perf/make_mc12101_nmpu1-gcc-ld/: Makefile  main.cpp  mc12101board-nmpu1.ld
app/templates/: Makefile
app/templates/sometest/: Makefile
app/test/: Makefile  README.md  local.mk
app/test/float/: Makefile  local.json
app/test/nmblas/: Makefile  build-vs8.txt  diff-mc12101_nmc0-vs8.txt  global.mk
app/test/nmppm/: config.mk
app/test/nmpps/: Makefile  local.mk
app/test/nmpps_float/: Makefile  local.mk
include/: crtdbg2.h  fft.h  fft2.h  fft_32fc.h  fft_32fcr.h  fftexp.h  gen_profile.lua  generate_proflist.lua  macros.mlb  macros_fpu.h  malloc32.h  metric.h  minrep.h  minrep.mlb  mulmv.mlb  multiheap.h  nmblas.h  nmchar.h  nmdef.h  nmplc.h  nmpli.h  nmplm.h  nmpls.h  nmplv.h  nmpp.h  nmshort.h  nmtl.h  nmtype.h  profiler.h  profiler.mlb  profiler_access.h  profiler_nmcout.h  ringbuffer.h  ringremote.h  rpc-host.h  rpc-nmc.h  rpc.h  rtmacro.mlb  test.h  tfixpoint.h
include/nmblas/: nmblas_sgemm.h
include/nmplc/: cArithmetic.h  cInit.h  cInteger.h  cfixpnt32.h  cfixpnt64.h  nmplc.h
include/nmpli/: filter.h  iArithmetics.h  iCellTexture.h  iConvert.h  iDef.h  iDeinterlace.h  iFilter.h  iFiltration.h  iFloodFill.h  iInit.h  iPlessy.h  iPlessyDetector.h  iPrint.h  iReodering.h  iResample.h  iSelect.h  iSupport.h  isubpixel2d.h  isubpixel2dimpl.h  nmpli.h  warpimg.h
include/nmplm/: mInit.h  mInverse.h  mMatrixVector.h  mMatrixVectorDev.h  mStat.h  mSupport.h  nmplm.h
include/nmpls/: fft.h  fft_old.h  fftext.h  fftref.h  nmpls.h  sArithemitics.h  sCorrelation.h  sElementary.h  sFiltration.h  sResample.h  sfir.h
include/nmplv/: nmplv.h  nmtl.h  sArithmetics.h  sElementary.h  vArithmetics.h  vArithmeticsDev.h  vBitwise.h  vInit.h  vInitDev.h  vSelect.h  vStat.h  vSupport.h  vTransform.h
include/nmtl/: nmtl.h  nmtlio.h  tcmplx.h  tcmplx_spec.h  tfixpoint.h  tfixpointmath.h  tmatrix.h  tmatrix_spec.h  tnmcvec.h  tnmint.h  tnmmtr.h  tnmmtrpack.h  tnmvec.h  tnmvecpack.h  tvector.h
include/nmvcore/: vCore.h
include/rpc/: aura-exports.c  rpc-host.h  rpc-nmc-func.h  rpc-nmc.h
make/: Makefile  nmpp.sln  src-nmc-fixed.mk  src-nmc-float-gcc.mk  src-nmc-float.mk  src-nmc-int.mk  src.mk
make/arm/: Makefile
make/doxy/: Doxyfile  DoxygenLayout.xml  LuaXML.lua  Makefile  ipp-nmpp.lua  ipp-nmpp.xsl  ipp.xsl  nmpp.xsl  summary.lua  utf2win.bat  utf2win.tex.bat  www.bat
make/nmc3/: Makefile  checktools.mk  nmpp_nmc3.vcproj
make/nmpp-arm/: Makefile
make/nmpp-arm-rpc/: Makefile
make/nmpp-nmc3/: Makefile  legacy.mk  nmcc.mk  nmpp-nmc3.vcproj  nmpp_nmc3.vcproj
make/nmpp-nmc3-gcc/: Makefile  Makefile.print
make/nmpp-nmc3-nmcc/: Makefile  nmpp-nmc3-nmcc.vcproj
make/nmpp-nmc3-rpc/: Makefile
make/nmpp-nmc4/: Makefile  legacy.mk  nmcc.mk  nmpp-nmc4.vcproj  printobj.mk
make/nmpp-nmc4-gcc/: Makefile
make/nmpp-nmc4f/: Makefile  legacy.mk  premake5.lua
make/nmpp-nmc4f-gcc/: Makefile
make/nmpp-pc/: CMakeLists.txt  Makefile
make/nmpp-x86-x64/: CMakeLists.txt  Makefile  nmpp.vcxproj  nmpp.vcxproj.filters  premake5.lua
make/pc/gcc/: Makefile  nmpp-gcc.vcproj  nmpp_gcc.vcproj
make/pc/vs13/: Makefile  nmpp-vs13.vcxproj  nmpp_vs13.vcxproj
make/pc/vs80/: Makefile  checktools.mk  nmpp-vs80.vcproj  nmpp_vs80.vcproj
make/rpc-arm/: Makefile
src/aura/: nmppsAbs.c  nmppsDivC.c  nmppsMulC.c  nmppsMulV.c  nmppsSub.c  nmppsSum.c
src/nmpli/Plessy/: PlessyDetector.cpp
src/nmpls/Metric/: msd.c  nmppsNormDiff_32f.c  nmppsNormDiff_32fc.c  nmppsNormDiff_Inf.c  nmppsNormDiff_L1.c  nmppsNormDiff_L2_32f.c  nmppsNormDiff_L2_32fc.c  nmppsNormDiff_L2_32fcr.c  nmppsRMSD_32fc.c
src/nmvcore/nm/: BuildDiagWeights16.asm  BuildDiagWeights8.asm  DupValueInVector16.asm  DupValueInVector4.asm  DupValueInVector8.asm  VEC_DataXorRamN_ActivateAfifoVr.asm  VEC_DataXorRamV_ActivateAfifoVr.asm  vec_0_sub_data.asm  vec_Abs.asm  vec_AccMul1D1W32_AddVr.asm  vec_Add.asm  vec_Add4V.asm  vec_Add_VV_shift.asm  vec_And.asm  vec_And4V.asm  vec_AndNV.asm  vec_AndNot.asm  vec_ClipExt.asm  vec_ClipMul1D1W_AddClipD.asm  (+70 more)
(+2855 files in other folders)
